fix overflow white-space

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,15 @@
 @tailwind utilities;
 
 @layer base {
-	a, button{
-    @apply font-raj;
-  }
+	a,
+	button {
+		@apply font-raj;
+	}
+	html,
 	body {
 		font-family: 'Open Sans', sans-serif;
+		height: 100%;
+		width: 100%;
 	}
 }
 @layer components {
@@ -89,8 +93,7 @@
 		width: 100%;
 	}
 
-	.range-slider::-webkit-slider-thumb
-	{
+	.range-slider::-webkit-slider-thumb {
 		appearance: none;
 
 		height: 25px;
@@ -101,8 +104,6 @@
 		pointer-events: all;
 		cursor: grab;
 	}
-
-								
 }
 
 @layer utilities {
@@ -113,7 +114,7 @@
 		-webkit-line-clamp: 2;
 	}
 
-	.line-clamp-4{
+	.line-clamp-4 {
 		overflow: hidden;
 		display: -webkit-box;
 		-webkit-box-orient: vertical;
@@ -123,7 +124,7 @@
 	.scroll-bar::-webkit-scrollbar {
 		appearance: none;
 		width: 4px;
-		background: #F5F5F5;
+		background: #f5f5f5;
 		border-radius: 4px;
 	}
 
@@ -131,6 +132,6 @@
 		appearance: none;
 		width: 4px;
 		border-radius: 4px;
-		background: #DDDDDD;
+		background: #dddddd;
 	}
 }
